fix: overflow issue temporary fix

--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 html {
     font-family: "Nunito", sans-serif;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
